[gd_scene load_steps=5 format=2]

[ext_resource path="res://KeyboardKey.gd" type="Script" id=1]
[ext_resource path="res://assets/SourceCodePro-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 7.0
content_margin_right = 7.0
content_margin_top = 5.0
content_margin_bottom = 5.0
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[node name="KeyboardKey" type="PanelContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )
text_color = Color( 0.737255, 0.411765, 0.439216, 0.113725 )

[node name="Label1" type="Label" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 13.0
margin_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ð™"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 19.0
margin_top = 14.0
margin_right = 25.0
margin_bottom = 27.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "J"
align = 1

[node name="Overlay" type="Panel" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 27.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
